plugins {
    id 'maven-publish'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenLocal()
        mavenCentral()

        maven {
            url = "https://maven.quiltmc.org/repository/release/"
        }
    }

    dependencies {
        implementation 'com.google.guava:guava:30.1.1-jre'
        implementation 'com.google.code.gson:gson:2.8.7'

        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
        testImplementation 'org.hamcrest:hamcrest:2.2'
    }

    group = 'cuchaz'
    version = '1.2.1'

    var ENV = System.getenv()
    version = version + (System.getenv("GITHUB_ACTIONS") ? (System.getenv("SNAPSHOTS_URL") ? "-SNAPSHOT" : "") : "+local")

    task sourcesJar(type: Jar, dependsOn: classes) {
        classifier = 'sources'
        from sourceSets.main.allSource
    }

    java {
        withSourcesJar()
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = "UTF-8"

        it.options.release = 17
    }

//    publishing {
//        publications {
//            "$project.name"(MavenPublication) {
//                groupId project.group
//                artifactId project.name
//                version project.version
//                from components.java
//            }
//        }
//    }
}

allprojects {
    publishing {
        repositories {
            mavenLocal()

            def ENV = System.getenv()
            if (ENV.MAVEN_URL) {
                maven {
                    url ENV.MAVEN_URL
                    credentials {
                        username ENV.MAVEN_USERNAME
                        password ENV.MAVEN_PASSWORD
                    }
                }
            } else if (ENV.SNAPSHOTS_URL) {
                maven {
                    url ENV.SNAPSHOTS_URL
                    credentials {
                        username ENV.SNAPSHOTS_USERNAME
                        password ENV.SNAPSHOTS_PASSWORD
                    }
                }
            }
        }
    }
}
